Cambio de Título

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Fábrica Hilados</title>
+	<title>Sala de Tejeduría</title>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<link rel="icon" type="text/css" href="https://miro.medium.com/fit/c/176/176/1*mNUwyPBnxEcLSiYMcCk2BA.png">
 </head>
